--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   height: 100vh;
   min-width: 320px;
   min-height: 100vh;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -16,6 +16,7 @@
   --backgroundArticlesContainer: #f9fbfc;
   --contrastThemeColor: #8e3df7;
   --contrastThemeColor2: #eb681d;
+  --colorButtonPanel1: #f9fbfc;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -31,6 +32,7 @@
   --backgroundArticlesContainer: #1f252e;
   --contrastThemeColor: #eb681d;
   --contrastThemeColor2: #8e3df7;
+  --colorButtonPanel1: #31363a;
 }
 
 body {
@@ -40,6 +42,7 @@ body {
 
 .navbar {
   width: 100%;
+  min-width: 450px;
   display: grid;
   place-items: center;
   margin-bottom: 2rem;
@@ -76,9 +79,9 @@ body {
 
 /** Logotipo Gamor */
 .logo {
-  font-size: 2em;
+  font-family: Arial;
+  font-size: 2rem;
   margin: 0 4.6em;
-  height: 2rem;
   display: inline-flex;
 }
 
@@ -157,7 +160,8 @@ body {
 .btn-register {
   border-radius: 30px;
   border: 2px solid #615c5c;
-  padding: 1em 1.5em;
+  width: 10rem;
+  aspect-ratio: 3;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -169,7 +173,6 @@ body {
 
 .btn-register:hover {
   border: 2px solid var(--contrastThemeColor);
-  /* outline: 2px ridge var(--contrastThemeColor); */
 }
 
 .btn-register:active {
@@ -179,7 +182,7 @@ body {
 
 /** Sección principal */
 main {
-  width: 98%;
+  width: 100%;
   margin: 0 auto; /* Centra horizontalmente */
   background-color: var(--backgroundArticlesContainer);
   border-radius: 15px;
@@ -187,7 +190,7 @@ main {
 
 main section {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(410px, 420px));
 }
 
 #main-content article {
@@ -197,34 +200,83 @@ main section {
 }
 
 .panel-1 {
-  padding-top: 4rem;
+  padding: 8rem 0 5rem 0;
   display: grid;
-  gap: 2em;
+  gap: 5.5em;
   place-items: center;
 }
+
+.high-text {
+  width: 70%;
+  text-align: left;
+}
+
 .high-text p {
-  font-size: 36px;
+  font-size: 64px;
   margin: 0;
-  padding: 0em;
+  height: 4.5rem;
 }
 
 /* Borde circular para todos excepto el primer hijo */
 .high-text p:not(:first-of-type) {
+  transform: skewX(0);
+}
+.high-text p:not(:first-of-type)::before {
+  content: "";
+  position: absolute;
+  margin: -10px 5px;
+  width: 95%;
+  height: 15vh;
   border: 1px solid var(--contrastThemeColor2);
-  border-top: none;
+  top: -2rem;
   border-radius: 50%;
-  /* transform: rotate(-45deg); */
+  border-top: none;
+  transform: skewX(-10deg) skewY(-10deg) rotate(0deg);
 }
 /* Segundo hijo p */
 .high-text p:nth-child(2) {
   color: var(--contrastThemeColor2);
 }
 
-.panel-1 label {
-  display: flex;
-  height: 5rem;
+.panel-1 .low-text {
+  display: inline;
 }
-.panel-1 label b {
-  text-decoration: underline var(--contrastThemeColor);
-  /* border-bottom: 2px solid var(--contrastThemeColor); */
+.panel-1 .low-text .curve {
+  width: 100px;
+  height: 1rem;
+  left: 7rem;
+  position: relative;
+  border-top: solid 3px var(--contrastThemeColor);
+  border-radius: 50% 40% 0% 0%;
+}
+
+.panel-1 .links {
+  margin-top: -4em;
+}
+.panel-1 .links * {
+  display: inline-block;
+  margin: 1rem;
+}
+.panel-1 .links button {
+  background-color: var(--colorButtonPanel1);
+  color: var(--backgroundFont);
+  box-shadow: 1px 1px 10px 0px #0003;
+  border: none;
+}
+.panel-1 .links button:hover {
+  border: 1px solid var(--contrastThemeColor);
+}
+.panel-1 .links button:active {
+  background-color: var(--contrastThemeColor);
+}
+.panel-1 .links a {
+  text-decoration: none;
+  color: var(--backgroundFont);
+}
+.panel-1 .links a:hover {
+  color: var(--contrastThemeColor);
+}
+
+.panel-2 {
+  background-color: var(--contrastThemeColor);
 }
