--- a/src/styles/Categories.css
+++ b/src/styles/Categories.css
@@ -8,44 +8,44 @@
 
 .categories-list {
   padding-left: 0;
-  margin-left: -1.2rem;
   display: grid;
   gap: 15px;
   text-align: left;
   grid-template-columns: repeat(auto-fit, minmax(305px, 300px));
 }
-.categories-list li {
-  margin-left: 1rem;
-  list-style: none;
-  counter-increment: step-counter;
+
+.category {
   padding-top: 2rem;
-  border-radius: 15px;
+  border-radius: 10px;
   background-color: var(--backgroundArticlesContainer);
   font-size: 14px;
+  font-weight: bold;
   color: var(--colorNavBarLeft);
   width: 100%;
   height: 120px;
   transition: transform 0.4s;
   cursor: pointer;
-}
-.categories-list li:last-child {
   list-style: none;
+  counter-increment: step;
 }
-.categories-list li:hover {
+.category:hover {
   transform: scale(1.1);
 }
-.categories-list li * {
-  margin: 0;
-  margin-left: 1rem;
-  color: var(--colorFont);
-  font-weight: bold;
+.category li {
+  margin-top: -1rem;
+  margin-left: 2rem;
 }
-.categories-list li:not(:last-child):before {
-  content: "/ " counter(step-counter, decimal-leading-zero);
-  margin-left: 1rem;
+.category:not(:last-child) li::before {
+  content: counter(step, decimal-leading-zero);
+}
+.category:last-child li::before {
+  content: "VIEW ALL";
   color: var(--colorNavBarLeft);
 }
-.categories-list li:last-child::before {
-  content: "VIEW ALL";
+.category li * {
+  margin: 0;
+  color: var(--colorFont);
+}
+.category em {
   margin-left: 1rem;
 }
