--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -40,26 +40,24 @@
 .logo {
   margin-inline: 13rem;
 }
-.logo * {
-  display: flexbox;
-}
 .logo-link {
   text-decoration: none;
   color: var(--colorLogoFont);
-  font-size: 2rem;
+  font-size: 32px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Arial;
 }
 .logo-widget {
-  position: relative;
+  position: absolute;
   background-color: rgba(255, 255, 255, 0);
   backdrop-filter: blur(5px) opacity(1);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border: 1px solid #ffffff0e;
   border-radius: 50%;
-  left: 12px;
-  top: 2px;
+  margin-left: -14px;
+  margin-top: 8px;
   padding: 0.8rem;
+  display: inline-block;
 }
 
 /** Checkbox para activar modo oscuro */
@@ -123,17 +121,11 @@
   transition: 0.15s linear background;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1339px) {
   .navbar {
     min-width: 500px;
-  }
-  .navbar > span {
-    margin-block: 15px;
-  }
-  .logo * {
-    display: flex;
-  }
-  .logo-widget {
-    top: -6px;
+    display: grid;
+    gap: 2rem;
+    text-align: center;
   }
 }
